--- a/index.html
+++ b/index.html
@@ -9,184 +9,191 @@
       text-align: center;
       padding: 20px;
     }
-
-    .nav {
-      margin-bottom: 10px;
+    .timeline-block {
+      margin-bottom: 40px;
     }
-
-    .timeline-section {
-      margin: 20px auto;
-      width: fit-content;
-    }
-
-    .timeline-title {
-      font-weight: bold;
-      margin-top: 1em;
-    }
-
     .timeline {
       display: grid;
       grid-template-columns: repeat(12, 1fr);
-      gap: 8px;
+      gap: 10px;
+      justify-items: center;
     }
-
     .entry {
       display: flex;
       flex-direction: column;
       align-items: center;
+    }
+    .timestamp {
       font-size: 10px;
-      width: 40px;
+      margin-bottom: 4px;
     }
-
     .icon {
-      width: 30px;
-      height: 30px;
+      width: 40px;
+      height: 40px;
+      margin-top: 4px;
     }
-
+    svg.arrow {
+      width: 20px;
+      height: 40px;
+    }
     .highlight {
-      filter: drop-shadow(0 0 5px orange);
+      filter: drop-shadow(0 0 4px orange);
+    }
+    .nav {
+      margin-bottom: 20px;
+    }
+    .nav a {
+      margin: 0 20px;
+      text-decoration: none;
+      font-weight: bold;
+      color: #0077cc;
     }
   </style>
 </head>
 <body>
-  <div class="nav">
-    <a href="#" id="prevLink">← 前日</a> |
-    <span id="dateTitle"></span> |
-    <a href="#" id="nextLink">翌日 →</a>
+  <div class="nav" id="nav"></div>
+  <h2 id="title">風向タイムライン</h2>
+
+  <div class="timeline-block">
+    <h3>午前</h3>
+    <div class="timeline" id="am1"></div>
+    <div class="timeline" id="am2"></div>
   </div>
 
-  <div class="timeline-section">
-    <div class="timeline-title">午前</div>
-    <div class="timeline" id="amTimeline"></div>
-    <div class="timeline" id="amTimeline2"></div>
-  </div>
-
-  <div class="timeline-section">
-    <div class="timeline-title">午後</div>
-    <div class="timeline" id="pmTimeline"></div>
-    <div class="timeline" id="pmTimeline2"></div>
+  <div class="timeline-block">
+    <h3>午後</h3>
+    <div class="timeline" id="pm1"></div>
+    <div class="timeline" id="pm2"></div>
   </div>
 
   <script>
-    const apiUrl = 'https://script.google.com/macros/s/AKfycbzZgiy79BuQtUgE1QVgdjaEpSD7knxwiLJsOdLADEmXk9eX2baUy9jwfsNomLXUKs6QbA/exec'; // 差し替え必要
-
-    // 日付の取得
+    const apiBase = 'https://script.google.com/macros/s/AKfycbzZgiy79BuQtUgE1QVgdjaEpSD7knxwiLJsOdLADEmXk9eX2baUy9jwfsNomLXUKs6QbA/exec';
     const urlParams = new URLSearchParams(window.location.search);
-    const dateParam = urlParams.get('date');
-    const today = new Date();
-    const currentDate = dateParam ? new Date(dateParam) : today;
+    const dateParam = urlParams.get("date");
 
-    const yyyy = currentDate.getFullYear();
-    const mm = String(currentDate.getMonth() + 1).padStart(2, '0');
-    const dd = String(currentDate.getDate()).padStart(2, '0');
-    const formattedDate = `${yyyy}/${mm}/${dd}`;
-    const displayDate = `${yyyy}年${mm}月${dd}日`;
+    function formatDate(date) {
+      return date.toISOString().split("T")[0].replace(/-/g, "/");
+    }
 
-    document.getElementById('dateTitle').textContent = displayDate;
+    function getDateObj(str) {
+      const [y, m, d] = str.split("/").map(Number);
+      return new Date(y, m - 1, d);
+    }
 
-    // 前日・翌日リンク
-    const prevDate = new Date(currentDate);
-    prevDate.setDate(currentDate.getDate() - 1);
-    const nextDate = new Date(currentDate);
-    nextDate.setDate(currentDate.getDate() + 1);
+    function pad(num) {
+      return num.toString().padStart(2, "0");
+    }
 
-    const formatForURL = d =>
-      `${d.getFullYear()}-${String(d.getMonth() + 1).padStart(2, '0')}-${String(d.getDate()).padStart(2, '0')}`;
+    function highlightDir(deg) {
+      // 北北東〜東北東
+      return (deg >= 22.5 && deg <= 67.5);
+    }
 
-    document.getElementById('prevLink').href = `?date=${formatForURL(prevDate)}`;
-    document.getElementById('nextLink').href = `?date=${formatForURL(nextDate)}`;
+    function getColor(speed) {
+      if (speed < 1) return "#a0c4ff";
+      if (speed < 3) return "#5ca0ff";
+      if (speed < 5) return "#ffa600";
+      if (speed < 8) return "#ff6f00";
+      return "#d00000";
+    }
 
-    // SVG 矢印
     function createArrowSVG(deg, speed, highlight) {
-      const svgNS = 'http://www.w3.org/2000/svg';
-      const svg = document.createElementNS(svgNS, 'svg');
-      svg.setAttribute('width', '40');
-      svg.setAttribute('height', '40');
-      svg.setAttribute('viewBox', '0 0 40 40');
-
-      const g = document.createElementNS(svgNS, 'g');
-      g.setAttribute('transform', `rotate(${(deg + 180) % 360}, 20, 20)`); // 風下方向
-
-      const shaft = document.createElementNS(svgNS, 'line');
-      shaft.setAttribute('x1', '20');
-      shaft.setAttribute('y1', '25');
-      shaft.setAttribute('x2', '20');
-      shaft.setAttribute('y2', '15');
-      shaft.setAttribute('stroke', getColorBySpeed(speed));
-      shaft.setAttribute('stroke-width', '3');
-      shaft.setAttribute('stroke-linecap', 'round');
-      g.appendChild(shaft);
-
-      const head = document.createElementNS(svgNS, 'polygon');
-      head.setAttribute('points', '16,15 24,15 20,5');
-      head.setAttribute('fill', highlight ? 'red' : getColorBySpeed(speed));
-      g.appendChild(head);
-
-      if (highlight) {
-        g.setAttribute('filter', 'drop-shadow(0 0 5px orange)');
-      }
-
-      svg.appendChild(g);
-      return svg;
+      const rotation = (deg + 180) % 360;
+      const color = getColor(speed);
+      const g = document.createElementNS("http://www.w3.org/2000/svg", "svg");
+      g.setAttribute("class", `arrow ${highlight ? "highlight" : ""}`);
+      g.setAttribute("viewBox", "0 0 20 40");
+      g.innerHTML = `
+        <g transform="rotate(${rotation}, 10, 20)">
+          <line x1="10" y1="5" x2="10" y2="30" stroke="${color}" stroke-width="3" />
+          <polygon points="5,5 15,5 10,0" fill="${color}" />
+        </g>
+      `;
+      return g;
     }
 
-    function getColorBySpeed(speed) {
-      if (speed < 2) return '#00f';       // 弱風
-      if (speed < 4) return '#0cf';
-      if (speed < 6) return '#0f0';
-      if (speed < 8) return '#fc0';
-      return '#f00';                      // 強風
+    function createEntry(entry) {
+      const t = new Date(entry.timestamp);
+      const hour = t.getHours();
+      const minute = t.getMinutes();
+      const timeStr = `${pad(hour)}:${pad(minute)}`;
+      const deg = entry.windDeg ?? 0;
+      const speed = entry.windSpeed ?? 0;
+      const iconCode = entry.icon ?? '';
+      const desc = entry.description ?? '';
+
+      const div = document.createElement("div");
+      div.className = "entry";
+
+      const timeDiv = document.createElement("div");
+      timeDiv.className = "timestamp";
+      timeDiv.textContent = timeStr;
+
+      const arrow = createArrowSVG(deg, speed, highlightDir(deg));
+
+      const icon = document.createElement("img");
+      icon.className = "icon";
+      icon.src = `https://openweathermap.org/img/wn/${iconCode}.png`;
+      icon.alt = desc;
+
+      div.appendChild(timeDiv);
+      div.appendChild(arrow);
+      div.appendChild(icon);
+      return div;
     }
 
-    function isHighlightedDir(deg) {
-      return (deg >= 22.5 && deg <= 67.5); // NNE〜ENE
+    function renderTimelines(data) {
+      const am1 = document.getElementById("am1");
+      const am2 = document.getElementById("am2");
+      const pm1 = document.getElementById("pm1");
+      const pm2 = document.getElementById("pm2");
+
+      const am = data.filter(d => new Date(d.timestamp).getHours() < 12);
+      const pm = data.filter(d => new Date(d.timestamp).getHours() >= 12);
+
+      [am1, am2].forEach(e => e.innerHTML = "");
+      [pm1, pm2].forEach(e => e.innerHTML = "");
+
+      am.forEach((e, i) => {
+        (i < 12 ? am1 : am2).appendChild(createEntry(e));
+      });
+      pm.forEach((e, i) => {
+        (i < 12 ? pm1 : pm2).appendChild(createEntry(e));
+      });
     }
 
-    fetch(apiUrl)
+    function setNavAndTitle(dateStr) {
+      const dateObj = getDateObj(dateStr);
+      const title = document.getElementById("title");
+      title.textContent = `${dateStr} の風向タイムライン`;
+
+      const nav = document.getElementById("nav");
+      const prev = new Date(dateObj);
+      prev.setDate(prev.getDate() - 1);
+      const next = new Date(dateObj);
+      next.setDate(next.getDate() + 1);
+      nav.innerHTML = `
+        <a href="?date=${formatDate(prev)}">← 前日</a>
+        <a href="?date=${formatDate(next)}">翌日 →</a>
+      `;
+    }
+
+    const today = new Date();
+    const dateStr = dateParam || formatDate(today);
+    setNavAndTitle(dateStr);
+
+    fetch(`${apiBase}?date=${encodeURIComponent(dateStr)}`)
       .then(res => res.json())
       .then(data => {
-        const am1 = document.getElementById('amTimeline');
-        const am2 = document.getElementById('amTimeline2');
-        const pm1 = document.getElementById('pmTimeline');
-        const pm2 = document.getElementById('pmTimeline2');
-
-        const filtered = data.filter(entry =>
-          entry.timestamp.startsWith(formattedDate)
-        );
-
-        filtered.forEach((entry, index) => {
-          const dt = new Date(entry.timestamp);
-          const hour = dt.getHours();
-          const minute = dt.getMinutes();
-          const timeStr = `${String(hour).padStart(2, '0')}:${String(minute).padStart(2, '0')}`;
-
-          const container = document.createElement('div');
-          container.className = 'entry';
-
-          const timeEl = document.createElement('div');
-          timeEl.textContent = timeStr;
-
-          const arrow = createArrowSVG(entry.windDeg ?? 0, entry.windSpeed ?? 0, isHighlightedDir(entry.windDeg ?? 0));
-
-          const icon = document.createElement('img');
-          icon.className = 'icon';
-          icon.src = `https://openweathermap.org/img/wn/${entry.icon}@2x.png`;
-          icon.alt = entry.description ?? '';
-
-          container.appendChild(timeEl);
-          container.appendChild(arrow);
-          container.appendChild(icon);
-
-          // 分割配置（1段12個）
-          if (hour < 12) {
-            (index < 12 ? am1 : am2).appendChild(container);
-          } else {
-            (index < 36 ? pm1 : pm2).appendChild(container);
-          }
-        });
+        if (!Array.isArray(data) || data.length === 0) {
+          document.body.innerHTML += "<p>データがありません。</p>";
+        } else {
+          renderTimelines(data);
+        }
       })
       .catch(err => {
-        console.error('データ取得エラー:', err);
+        console.error(err);
+        document.body.innerHTML += "<p>データ取得エラー</p>";
       });
   </script>
 </body>
